k8s/base/api/service.yaml
---
apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  name: api
spec:
  template:
    metadata:
      annotations:
        autoscaling.knative.dev/minScale: "1"
    spec:
      containers:
        - name: api
          image: brdgme/api
          ports:
            - containerPort: 8000
          envFrom:
            - secretRef:
                name: postgres-config
          env:
            - name: ROCKET_ADDRESS
              value: "0.0.0.0"
